--- a/bower.json
+++ b/bower.json
@@ -9,6 +9,8 @@
     "Font-Awesome": "~4.1.0",
     "foundation": "zurb/bower-foundation#~5.2.3",
     "modularized-normalize-scss": "~3.0.1",
-    "bootstrap-sass-official": "~3.1.1"
+    "bootstrap-sass-official": "~3.1.1",
+    "nouislider": "~6.2.0",
+    "bootstrap-tabdrop": "~1.0.0"
   }
 }
