--- a/bower.json
+++ b/bower.json
@@ -11,6 +11,8 @@
     "modularized-normalize-scss": "~3.0.1",
     "bootstrap-sass-official": "~3.1.1",
     "nouislider": "~6.2.0",
-    "bootstrap-tabdrop": "~1.0.0"
+    "bootstrap-tabdrop": "~1.0.0",
+    "jquery-knob": "~1.2.8",
+    "jquery.easy-pie-chart": "~2.1.4"
   }
 }
