--- a/bower.json
+++ b/bower.json
@@ -16,7 +16,8 @@
     "jquery.easy-pie-chart": "~2.1.4",
     "stroll": "*",
     "bootstrap-timepicker": "~0.2.6",
-    "bootstrap-datepicker": "~1.3.0"
+    "bootstrap-datepicker": "~1.3.0",
+    "jquery-file-upload": "~9.5.7"
   },
   "devDependencies": {
     "jquery.sparkline": "~2.1.2"
