--- a/bower.json
+++ b/bower.json
@@ -18,7 +18,8 @@
     "bootstrap-timepicker": "~0.2.6",
     "bootstrap-datepicker": "~1.3.0",
     "jquery-file-upload": "~9.5.7",
-    "jquery.sparkline": "~2.1.2"
+    "jquery.sparkline": "~2.1.2",
     "d3": "~3.4.8",
+    "handsontable": "~0.10.5"
   }
 }
