--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
   "name": "r2s",
   "dependencies": {
-    "grunt-contrib-concat": "^0.4.0"
+    "grunt-contrib-concat": "^0.4.0",
+    "bower": "^1.3.7"
   },
   "devDependencies": {
     "grunt-contrib-concat": "^0.4.0",
