--- a/bower.json
+++ b/bower.json
@@ -23,6 +23,7 @@
     "handsontable": "~0.10.5",
     "x-editable": "~1.5.1",
     "skrollr": "~0.6.26",
-    "dropzone": "~3.10.2"
+    "dropzone": "~3.10.2",
+    "velocity": "~0.8.0"
   }
 }
