--- a/bower.json
+++ b/bower.json
@@ -24,6 +24,7 @@
     "x-editable": "~1.5.1",
     "skrollr": "~0.6.26",
     "dropzone": "~3.10.2",
-    "velocity": "~0.8.0"
+    "velocity": "~0.8.0",
+    "jquery.contenteditable": "~0.2.0"
   }
 }
