--- a/bower.json
+++ b/bower.json
@@ -25,6 +25,8 @@
     "skrollr": "~0.6.26",
     "dropzone": "~3.10.2",
     "velocity": "~0.8.0",
-    "jquery.contenteditable": "~0.2.0"
+    "jquery.contenteditable": "~0.2.0",
+    "bootstrap-chosen": "*",
+    "medium-editor": "~1.8.14"
   }
 }
